Navbar styles, fix scaling on mobile, clean up components

--- a/src/globals.css
+++ b/src/globals.css
@@ -4,6 +4,11 @@
 	box-sizing: border-box;
 }
 
+:root {
+	--primary-color: #333;
+	--secondary-color: white;
+}
+
 html,
 body {
 	position: relative;
@@ -12,9 +17,9 @@ body {
 }
 
 body {
-	color: #333;
+	color: var(--primary-color);
 	margin: 0;
-	padding: 8px;
+	padding: 0;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
 		Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
@@ -22,16 +27,13 @@ body {
 }
 
 a {
-	color: rgb(0, 100, 200);
+	color: var(--primary-color);
 	text-decoration: none;
 }
 
 a:hover {
 	text-decoration: underline;
-}
-
-a:visited {
-	color: rgb(0, 80, 160);
+	color: #999;
 }
 
 label {
